# laconic

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  next.config.mjs  package.json  pnpm-lock.yaml  server.json  smithery.yaml  tailwind.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
app/docs/: layout.tsx
app/docs/[slug]/: loading.tsx  page.tsx
components/: doc-navigation.tsx  footer.tsx  header.tsx  markdown-content.tsx  mobile-nav.tsx  sidebar.tsx  table-of-contents.tsx
crates/laconic-cli/: Cargo.toml
crates/laconic-cli/src/: main.rs  telemetry.rs
crates/laconic-core/: Cargo.toml  README.md
crates/laconic-core/src/: lib.rs  tokens.rs
crates/laconic-core/src/strategies/: badges.rs  code_fences.rs  headings.rs  html_cleanup.rs  html_tables.rs  mod.rs  tables.rs  urls.rs  whitespace.rs
crates/laconic-core/tests/: fabric_corpus.rs
crates/laconic-mcp/: Cargo.toml
crates/laconic-mcp/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli-reference.md  getting-started.md  installation.md  introduction.md  library-usage.md  mcp-server.md  strategies.md
docs/src/.well-known/mcp/: server-card.json
docs/src/recipes/: cicd.md  rag-pipelines.md  token-budgeting.md
lib/: docs.ts
public/: manifest.json  robots.txt
worker/: wrangler.toml
worker/src/: index.js
