[package]
name = "laconic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Laconic CLI — compress markdown for LLM token efficiency"

[[bin]]
name = "laconic"
path = "src/main.rs"

[dependencies]
laconic-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
